--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,7 @@
         <title>Ractive-Tooltip Demo</title>
 
         <script src='http://cdn.ractivejs.org/latest/ractive.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/ractive/0.8.15-build-3/ractive-legacy.min.js'></script>
         
         <style>
 
